# template_kubeflow

./: README.md  pyproject.toml
.github/actions/set-environment/: action.yaml
.github/workflows/: deploy-ml-pipeline.yaml  run-unit-test-pullrequest-develop.yaml
config/: config.py  config_data_extraction.py  types.py  util.py
github/actions/set-environment/: action.yaml
github/workflows/: deploy-ml-pipeline.yaml  run-unit-test-pullrequest-develop.yaml
ml_pipeline/: pipeline.py
ml_pipeline/components/data_extraction/: glue_script.py
ml_pipeline/components/exit_handler/: exit_handler.py  steps.py
ml_pipeline/components/feature_engineering/: feature_engineering.py  steps.py
ml_pipeline/components/preprocessing/: preprocessing.py  steps.py
ml_pipeline/components/set_mining/: set_mining.py  steps.py
ml_pipeline/components/setup_extraction/: setup_extraction.py
ml_pipeline/components/setup_pipeline/: setup_pipeline.py  steps.py
ml_pipeline/util/: data_class.py  exceptions.py  util.py
tests/: conftest.py  pytest.ini
tests/integration_tests/: test_example_integration_test.py
tests/unit_tests/: test_unit_test_example.py
