[tool.poetry]
name = "setup_mining"
version = "0.1.0"
description = "An example project for running ML pipelines via Kubeflow"
authors = ["Carlo Voss"]
readme = "README.md"
packages = [
    { include = "ml_pipeline" },
    { include = "helpers" },
    { include = "config" },
]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.26"
cloudpathlib = "~0.13.0"
fsspec = "^2023.01.0"
joblib = "~1.2.0"
kfp = "~1.8.22"
numpy = "^1.24.1"
pandas = "^1.5.3"
scikit-learn = "1.2.1"
s3fs = "^2023.01.0"
typer="~0.4.0"
mlxtend="~0.21.0"
scipy="^1.7.3"
matplotlib="^3.5.3"
jupyter="^1.0.0"
openpyxl="^3.0.10"
truth-table-generator="1.1.2"
great-expectations="0.15.41"
awswrangler="^3.0"
omegaconf="^2.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^22.12.0"}
flake8 = "5.0.4"
flake8-bugbear = "22.10.27"
isort = "^5.11.4"
poethepoet = "^0.17.1"
pyproject-flake8 = "5.0.4"
plotly = "^5.18"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
moto = "^4.1.0"
pytest = "^7.2.1"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 119
max-complexity = 10
select = ["C", "E", "F", "W", "B", "B950"]
ignore = ["E203", "E501", "W503"]
exclude = [
    ".git",
    ".gitignore",
    "__pycache__",
    "*.egg-info",
    ".nox",
    ".mypy_cache",
    ".pytest_cache",
    ".venv",
    "venv",
    ".vscode",
    ".idea",
]

[tool.black]
line-length = 119

[tool.isort]
line_length = 88
profile = "black"
skip_gitignore = true

[tool.poe.tasks]
format = {cmd = "black .", help = "Check code style and perform formatting"}
format_imports = {cmd = "isort .", help = "Beautify import formatting"}
lint = {cmd = "pflake8 .", help = "Perform linting on your code"}
format_and_lint = ["format", "format_imports", "lint"]

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
